# NeuroQuant

./: .gitignore  CLAUDE.md  README.md  cli.py  compare.py  config.yaml  gui.py  pyproject.toml  requirements.txt  run.bat  run_dark.bat  spec_neuroquant_v2.md
neuroquant/: __init__.py  __main__.py  analyzer.py  benchmark.py  cli.py  controller.py  encoder.py  metrics.py  report.py  sr_processor.py  types.py  utils.py
tests/: __init__.py  test_controller.py  test_metrics.py  test_utils.py
