[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuroquant"
version = "0.1.0"
description = "Інтелектуальна система аналізу та стиснення відеоданих"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "NeuroQuant Team"}
]
keywords = ["video", "compression", "codec", "hevc", "super-resolution", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "opencv-python>=4.8",
    "numpy>=1.24",
    "scenedetect[opencv]>=0.6",
    "torch>=2.1",
    "torchvision>=0.16",
    "huggingface_hub>=0.20",
    "basicsr>=1.4.2",
    "realesrgan>=0.3.0",
    "ffmpeg-python>=0.2",
    "scikit-image>=0.21",
    "scipy>=1.11",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
neuroquant = "neuroquant.cli:main"

[project.urls]
Homepage = "https://github.com/neuroquant/neuroquant"
Documentation = "https://github.com/neuroquant/neuroquant#readme"
Repository = "https://github.com/neuroquant/neuroquant"

[tool.setuptools.packages.find]
where = ["."]
include = ["neuroquant*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
